# ACTAGhost

./: .coverage  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  ARCHITECTURE_REPORT.md  Dockerfile  FEATURES_MAP.md  IMPLEMENTATION_PLAN.md  OVERVIEW.md  PERFORMANCE_REPORT.md  PRODUCTION_READINESS.md  PROJECT_AUDIT.md  README.md  ROADMAP.md  SECURITY_REPORT.md  TASKS.md  TECH_DEBT.md  TESTING.md  docker-compose.yml  pyproject.toml  run.sh
.cursor/skills/product-intent-auditor/: SKILL.md
.github/workflows/: ci.yml
acta/: __init__.py  config.py  i18n.py  logging_config.py  schemas.py
acta/agents/: __init__.py  base.py  context_agent.py  decision_agent.py  integration_agent.py  intent_agent.py  knowledge_graph_agent.py  memory_agent.py  multimodal_agent.py  planning_agent.py  reasoning_agent.py  security_agent.py  specialized.py  ui_agent.py
acta/api/: __init__.py  app.py
acta/channels/: __init__.py  base.py  telegram.py  whatsapp.py
acta/identity/: __init__.py  models.py  registry.py
acta/integration/: __init__.py  connectors.py  system.py
acta/knowledge_graph/: __init__.py  graph.py
acta/memory/: __init__.py  store.py
acta/multimodal/: __init__.py  processor.py
acta/observability/: __init__.py  runtime.py
acta/orchestrator/: __init__.py  orchestrator.py  state.py
acta/providers/: __init__.py  base.py  cloud.py  mock.py  router.py  vlm.py
acta/security/: __init__.py  audit.py  crypto.py  permissions.py
acta/vision/: __init__.py  cameras.py  frames.py  lora.py  pipeline.py  preprocess.py
acta/web/: app.js  index.html  styles.css
alembic/: env.py
alembic/versions/: 20260619_0001_initial_schema.py
prompts/: ---AGENT.md  ACTA-----.md
tests/: conftest.py  test_agents.py  test_api.py  test_api_security.py  test_channels.py  test_concurrency.py  test_i18n.py  test_identity.py  test_kg.py  test_llm_integration.py  test_memory.py  test_migrations.py  test_multimodal_processor.py  test_observability.py  test_pipeline.py  test_reliability.py  test_security.py  test_system.py  test_vision_api.py  test_vision_integration.py  test_vision_lora.py  test_vision_pipeline.py  test_vision_preprocess.py  test_vlm_providers.py
